--- a/notebooks/reg_SLD data on mental health.ipynb
+++ b/notebooks/reg_SLD data on mental health.ipynb
@@ -1503,7 +1503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overall, ridge pregression performs the best."
+    "# Overall, ridge regression performs the best.\n"
    ]
   },
   {
